<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2tfg"
    tools:context=".menus.Resenas">
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigationR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#CEC2A9"
        app:menu="@menu/bottom_nav_menu"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="380dp"
        android:layout_height="115dp"
        android:fontFamily="@font/belleza"
        android:gravity="center"
        android:text="@string/tituloResenas"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="324dp"
        android:layout_height="51dp"
        android:layout_marginTop="128dp"
        android:gravity="center"
        android:text="@string/subtituloResenas"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listViewResenas"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:divider="#000000"
        android:dividerHeight="1dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="358dp"
        android:layout_height="55dp"
        android:layout_marginTop="504dp"
        android:gravity="center_horizontal"
        android:text="@string/insertarResenas"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ibInsertarResena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/ibInsertarResena"
        android:layout_width="65dp"
        android:layout_height="66dp"
        android:layout_marginTop="584dp"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/botonmas" />

</androidx.constraintlayout.widget.ConstraintLayout>